examples/test/testpolicy4799.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4799
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key40: value42
      key12: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value34
          key40: value44
          key41: value42
      podSelector:
        matchLabels:
          key33: value16
          key31: value16
          key24: value39
